<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SkillGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Beállítások</string>
    <string name="start_button">Start</string>
    <string name="profil_button">Profil</string>
    <string name="info_button">Információ</string>
    <string name="port_number_label">Port:</string>
    <string name="port_number_hint">8888</string>
    <string name="host_button">Hoszt mód</string>
    <string name="ip_address_label">IP cím:</string>
    <string name="client_button">Kliens mód</string>
    <string name="dialog_message">Verziószám: 1.0 \nSzerzők: Farkas Péter, Matyóka Roland \n\ngithub: https://github.com/p4farkas/SkillGame</string>
    <string name="dialog_title">SkillGame információ</string>
    <string name="ip_address_hint">192.168.1.1</string>
    <string name="title_activity_shooting">ShootingActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="title_activity_solve_it">SolveItActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="score_label">Eredmény</string>
    <string name="fault_score_label">Büntetőpont</string>
    <string name="high_score_label">Legjobb eredmények:</string>
    <string name="result_score_label">Végső pontszám</string>
    <string name="new_game_button_label">Új játék</string>
    <string name="result_myscore_label">Én: 0 pont</string>
    <string name="result_enemyscore_label">Játékostárs: 0 pont</string>
    <string name="help_button_text">Leírás</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_content_text">Egy kétszemélyes, hálózati játékszoftver, melyben időre kell az alábbi feladatokat végrehajtani:</string>
    <string name="help_app1_text">Színválasztó</string>
    <string name="help_app2_text">Befoglaló</string>
    <string name="help_app3_text">Párbajozó</string>
    <string name="help_app4_text">Számolgató</string>
    <string name="dialog_app1_message">Koppintással jelezd ha a felirat szövege és színe megegyezik.</string>
    <string name="dialog_app2_message">Rajzold meg a legkisebb befoglaló téglalapot.</string>
    <string name="dialog_app3_message">Az ellenfél párbajlövése után süssd el te is mihamarabb a fegyvert és győzedelmeskedj a párbajban.</string>
    <string name="dialog_app4_message">Válaszd ki azt a lehetőséget a hiányzó karakter helyére amellyel az egyenlet két oldala azonos értékű lesz.</string>
    <string name="dialog_app1_title">Színválasztó játék</string>
    <string name="dialog_app2_title">Befoglaló játék</string>
    <string name="dialog_app3_title">Párbajozó játék</string>
    <string name="dialog_app4_title">Számolgató játék</string>
    <string name="anonym_text">Anonymus</string>

</resources>
