<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.uniobuda.nik.androgamers.main_menu.HelpActivity">

    <TextView
        android:id="@+id/help_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/help_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_headline"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/help_content_text"
        android:textSize="@dimen/text_size" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="2">

        <Button
            android:id="@+id/help_app1"
            style="@style/button_style"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_margin="5dp"
            android:text="@string/help_app1_text" />

        <Button
            android:id="@+id/help_app2"
            style="@style/button_style"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_margin="5dp"
            android:text="@string/help_app2_text" />

        <Button
            android:id="@+id/help_app3"
            style="@style/button_style"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_margin="5dp"
            android:text="@string/help_app3_text" />

        <Button
            android:id="@+id/help_app4"
            style="@style/button_style"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_margin="5dp"
            android:text="@string/help_app4_text" />

    </GridLayout>


</RelativeLayout>
