<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#EBEBEB"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.uniobuda.nik.androgamers.main_menu.ConnectActivity">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/port_number_host_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingTop="8dp"
            android:text="@string/port_number_label"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/port_number_host_input"
            style="@style/edit_style"
            android:layout_width="100dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/port_number_host_label"
            android:digits="0123456789"
            android:hint="@string/port_number_hint"
            android:inputType="numberDecimal"
            android:maxLength="4" />
    </RelativeLayout>

    <Button
        android:id="@+id/host_button"
        style="@style/button_style"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/host_button" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ip_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/host_button"
            android:layout_marginTop="15dp"
            android:paddingTop="8dp"
            android:text="@string/ip_address_label"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/ip_address_input"
            style="@style/edit_style"
            android:layout_width="200dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/ip_address_label"
            android:hint="@string/ip_address_hint"
            android:inputType="phone"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/port_number_client_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ip_address_label"
            android:layout_marginTop="20dp"
            android:paddingTop="8dp"
            android:text="@string/port_number_label"
            android:textSize="@dimen/text_size"

            />

        <EditText
            android:id="@+id/port_number_client_input"
            style="@style/edit_style"
            android:layout_width="100dp"
            android:layout_below="@id/ip_address_label"
            android:layout_toRightOf="@+id/port_number_client_label"
            android:digits="0123456789"
            android:hint="@string/port_number_hint"
            android:inputType="numberDecimal"
            android:maxLength="4" />
    </RelativeLayout>

    <Button
        android:id="@+id/client_button"
        style="@style/button_style"
        android:layout_marginTop="10dp"
        android:text="@string/client_button" />

</LinearLayout>
